--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>We're not special</title>
   </head>
 <body>
+    <h1>POSEER 5 SECONDEN</h1>
     <canvas id="canvas"></canvas>
 </body>
 </html>
